adding upgrade script for a change in the db working on accessibility issues fixing bugs   - properties of all types removing the creation of the first default run now the group of users of the run is crated after the administrator manages the roles

--- a/www/resources/imsld.css
+++ b/www/resources/imsld.css
@@ -74,3 +74,27 @@ ul {
   white-space: nowrap;
 }
 
+/* arrow to minimize / maximize the activitie's tree window */
+
+
+/* notices / messages style */
+.notice {		
+  font-size: x-small; 
+  font-weight: bold; 
+  background-color: #bbbbff; 
+  padding:0px;
+  margin:0px;
+}
+
+.hide { 
+  position:absolute;
+  top:0px;
+  left:0px;
+  display:none;
+}
+.show { 
+  position:relative;
+  top:0px;
+  left:0px;
+}
+
