Several changes on the monitor screens. Shows now a summary of user activity.
Included imsld-master.adp for all pages in GRAIL. Needed to reorg. some code
to use such template.

Added a few messages in localization hash.

Fixed a few bugs when showing the environment, variable names, etc.

Produced a template for easily produce a select statement (choice-select.adp)

--- a/www/resources/imsld.css
+++ b/www/resources/imsld.css
@@ -44,7 +44,7 @@ a.finish:hover  {
   margin:0px;
 }
 
-ul {
+ul.mktree, ul.mktree ul {
   font-family: Verdana, Arial, Helvetica, sans-serif;
   font-size: 12px;
   font-style: normal;
@@ -82,3 +82,7 @@ ul {
   left:0px;
 }
 
+.centered-table table { 
+  margin-right: auto; 
+  margin-left: auto 
+}
