--- a/www/resources/imsld.css
+++ b/www/resources/imsld.css
@@ -5,10 +5,11 @@
 div.role_menu {
   text-align: right;
   font-size: 80%;
-  padding: 0px;      
   margin: 0px;
   top: 0px;
   right: 0px;
+  padding: 4px 4px;
+  float: right;
 } 
 
 .indented {  
@@ -86,3 +87,7 @@ ul.mktree, ul.mktree ul {
   margin-right: auto; 
   margin-left: auto 
 }
+
+.float-left { float: left; }
+
+.frame-header { text-align: center; padding: 6px 8px }
