Fixing the individual reports so they work if only the activity_id is provided. Adding messages to know whats going on during the import of the UoL. Changing the show/hide panel icon for a more proper one.

--- a/www/resources/imsld.css
+++ b/www/resources/imsld.css
@@ -80,10 +80,14 @@ ul.mktree, ul.mktree ul {
 }
 .show { 
   position:relative;
-  top:0px;
-  left:0px;
+  top:3px;
+  left:2px;
   display:block;
   float:left;
+}
+.show-hide-icon_link {
+  padding-top: 10px;
+  float: left;
 }
 
 .centered-table table { 
